src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__overlay_diff_context_new.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
/ 文 件 差 异 : src/lib.rs 新 版 本  / / / / / / / / / / / / / / / / / / / / / / / / / 
                                                                                
fn hello() {                                                                    
    println!("Hello, World!");                                                  
}                                                                               
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
↑/k ↑  ↓/j ↓  Space 翻 页   g/G 跳 转   Tab 切 换  old/new           Top
