src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__overlay_file_viewer.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
/ F I L E : src/main.rs                                                         
                                                                                
use std::collections::HashMap;                                                  
                                                                                
fn main() {                                                                     
    let mut map = HashMap::new();                                               
    map.insert("key", "value");                                                 
    println!("{:?}", map);                                                      
}                                                                               
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
↑/k ↑  ↓/j ↓  Space 翻 页   g/G 跳 转                                Top
