src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__overlay_transcript.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
/ 对 话 记 录 / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / 
                                                                                
Here is the code you requested:                                                 
                                                                                
```rust                                                                         
fn main() {                                                                     
    println!("Hello, World!");                                                  
}                                                                               
```                                                                             
                                                                                
This program prints a greeting.                                                 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
↑/k ↑  ↓/j ↓  Space 翻 页   g/G 跳 转                                Top
