src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__overlay_transcript_bottom.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
/ 对 话 记 录 / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / / 
                                                                                
Line 10: Some content here                                                      
Line 11: Some content here                                                      
Line 12: Some content here                                                      
Line 13: Some content here                                                      
Line 14: Some content here                                                      
Line 15: Some content here                                                      
Line 16: Some content here                                                      
Line 17: Some content here                                                      
Line 18: Some content here                                                      
Line 19: Some content here                                                      
Line 20: Some content here                                                      
Line 21: Some content here                                                      
Line 22: Some content here                                                      
Line 23: Some content here                                                      
Line 24: Some content here                                                      
Line 25: Some content here                                                      
Line 26: Some content here                                                      
Line 27: Some content here                                                      
Line 28: Some content here                                                      
Line 29: Some content here                                                      
Line 30: Some content here                                                      
↑/k ↑  ↓/j ↓  Space 翻 页   g/G 跳 转                               100%
