src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__overlay_transcript_top.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
/ T R A N S C R I P T                                                           
                                                                                
Line 1: Some content here                                                       
Line 2: Some content here                                                       
Line 3: Some content here                                                       
Line 4: Some content here                                                       
Line 5: Some content here                                                       
Line 6: Some content here                                                       
Line 7: Some content here                                                       
Line 8: Some content here                                                       
Line 9: Some content here                                                       
Line 10: Some content here                                                      
Line 11: Some content here                                                      
Line 12: Some content here                                                      
Line 13: Some content here                                                      
Line 14: Some content here                                                      
Line 15: Some content here                                                      
Line 16: Some content here                                                      
Line 17: Some content here                                                      
Line 18: Some content here                                                      
Line 19: Some content here                                                      
Line 20: Some content here                                                      
Line 21: Some content here                                                      
↑/k ↑  ↓/j ↓  Space 翻 页   g/G 跳 转                                70%
